--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,3 +1,10 @@
+.header {
+  margin: 20px 128px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .nav {
   display: flex;
   align-items: center;
@@ -5,4 +12,41 @@
   font-weight: 400;
   line-height: 1.25;
   gap: 28px;
+  margin: 0 auto;
+}
+.link {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.25;
+  color: #121417;
+  text-decoration: none;
+}
+
+.authLinks {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.linkLogin {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 8px;
+  text-decoration: none;
+  color: #121417;
+}
+.textLogin {
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.25;
+}
+.textRegister {
+  padding: 14px 39px;
+  background-color: #121417;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 1.25;
+  border-radius: 12px;
+  text-decoration: none;
 }
