Add HomePage styles for layout and hero section components

--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,8 +1,8 @@
 .header {
-  margin: 20px 128px;
+  padding: 20px 128px;
   display: flex;
   align-items: center;
-  justify-content: center;
+  width: 100vw;
 }
 
 .nav {
