--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,49 +1,94 @@
 .homeContainer {
-    padding: 0 64px;
-    max-height: 100vh;
+  padding: 0 64px;
+  max-height: 100vh;
 }
 .heroPage {
-    display: flex;
-    align-items: stretch;
-    gap: 24px;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  gap: 24px;
 }
 
 .heroSection {
-    font-family: 'Roboto', sans-serif;
-    padding: 98px 64px;
-    border-radius: 30px;
-    background-color: #F8F8F8;
-    min-width: 720px;
+  font-family: 'Roboto', sans-serif;
+  padding: 98px 64px;
+  border-radius: 30px;
+  background-color: #f8f8f8;
+  min-width: 720px;
 }
 .heroTitle {
-    font-family: 'Roboto', sans-serif;
-    font-size: 48px;
-    font-weight: 500;
-    line-height: 1.17;
-    margin-bottom: 32px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 1.17;
+  margin-bottom: 32px;
 }
 .highlight {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    background-color: #FBE9BA;
-    border-radius: 8px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  background-color: #fbe9ba;
+  border-radius: 8px;
 }
 .heroDescription {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.4;
-    margin-bottom: 64px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.4;
+  margin-bottom: 64px;
 }
 .heroButton {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 700;
-    line-height: 1.55;
-    background-color: #F4C550;
-    padding: 16px 88px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 700;
+  line-height: 1.55;
+  background-color: #f4c550;
+  padding: 16px 88px;
 }
 .heroButton:hover {
-    background-color: #FBE9BA;
+  background-color: #fbe9ba;
 }
-.heroImage {
-    display: block;
+.statisticsSection {
+  margin-top: 24px;
+  margin-bottom: 32px;
+}
+
+.statisticsBox {
+  position: relative;
+  padding: 40px 123px;
+  border-radius: 30px;
+  background-color: #ffffff;
+}
+.statsBorder {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+.statsBorder rect {
+  fill: none;
+  stroke: #f4c550;
+  stroke-width: 1.5;
+  stroke-dasharray: 15 15;
+  rx: 30;
+  ry: 30;
+}
+
+.statisticsList {
+  display: flex;
+ justify-content: space-between;
+  align-items: center;
+}
+.statisticItem {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+.statisticNumber {
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 1.14;
+}
+.statisticText {
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.28;
 }
